chapitres/14/ingress-traefik-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit-dashboard
  namespace: mailpit
spec:
  ingressClassName: nginx
  rules:
  - host: "mailpit.admin.eni.yannig.ovh"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailpit
            port:
              name: web
