chapitres/14/ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog-traefik
spec:
  ingressClassName: traefik
  rules:
  - host: "mailhog-traefik.eni.yannig.ovh"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailhog
            port:
              number: 8025
